@@ -1,3 +1,9 @@
+2019-06-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/formats.R (iso8601): Switch format to ISO8601 use with T between
+	date and time; allow option to override for old behaviour.
+	* man/iso8601.Rd: Document new behaviour and option.
+
 2019-06-10  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md (tinytest): Mention post-install testing
